--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 exceptiongroup==1.2.2
+evidently==0.4.36
 fastapi==0.112.0
 gitdb==4.0.11
 GitPython==3.1.43
