changer workflow as per docker compose

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,10 @@ jobs:
 
     - name: Build and push Streamlit image
       run: |
-        docker build --no-cache -t ***/msrit-bank-risk-cat-streamlit:latest -f docker.streamlit .
+        docker build --no-cache -t basudevp/msrit-bank-risk-cat-streamlit:latest -f docker.streamlit .
         docker push ***/msrit-bank-risk-cat-streamlit:latest
 
     - name: Build and push FastAPI image
       run: |
-        docker build --no-cache -t ***/msrit-bank-risk-cat-fastapi:latest -f docker.fastapi .
+        docker build --no-cache -t basudevp/msrit-bank-risk-cat-fastapi:latest -f docker.fastapi .
         docker push ***/msrit-bank-risk-cat-fastapi:latest
