--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,11 @@ jobs:
 
     - name: Build and push Streamlit image
       run: |
-        docker build --no-cache -t basudevp/msrit-bank-risk-cat-streamlit:latest -f docker.streamlit .
+        docker build --no-cache -t basudevp/msrit-bank-risk-cat-streamlit:latest -f dockerfiles/docker.streamlit .
         docker push basudevp/msrit-bank-risk-cat-streamlit:latest
-
+    
     - name: Build and push FastAPI image
       run: |
-        docker build --no-cache -t basudevp/msrit-bank-risk-cat-fastapi:latest -f docker.fastapi .
+        docker build --no-cache -t basudevp/msrit-bank-risk-cat-fastapi:latest -f dockerfiles/docker.fastapi .
         docker push basudevp/msrit-bank-risk-cat-fastapi:latest
+    
