--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,18 @@
-version: '3.8'
-
 services:
   fastapi:
+    container_name: fastapi
     build:
       context: .
       dockerfile: Dockerfile.fastapi
     ports:
       - "8001:8001"
-    volumes:
-      - .:/app
-    networks:
-      - app-network
 
   streamlit:
+    container_name: streamlit
     build:
       context: .
       dockerfile: Dockerfile.streamlit
     ports:
       - "8501:8501"
-    volumes:
-      - .:/app
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
+    depends_on:
+      - fastapi
